--- a/src/app/pages/missions/missions.page.scss
+++ b/src/app/pages/missions/missions.page.scss
@@ -1,5 +1,6 @@
 .flip-container {
   perspective: 1000px;
+  background-color: none;
 }
 
 .flipper {
@@ -56,4 +57,8 @@
 
 .icon {
   vertical-align: middle;
+}
+
+ion-list {
+  background-color: transparent;
 }
